# xts_device_attest_lite

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json
common/: devattest_errno.h
common/log/: devattest_log.h
common/mini/: devattest_configuration.h
common/small/: devattest_configuration.h
framework/: BUILD.gn
framework/mini/src/: attest_framework_client_mini.c
framework/small/include/: attest_framework_define.h  attest_log.h
framework/small/src/client/: attest_framework_client_proxy.c
framework/small/src/service/: attest_framework_feature.c  attest_framework_server.c  attest_framework_service.c
interfaces/: devattest_msg_def.h
interfaces/innerkits/: attest_result_info.h  devattest_interface.h  devattest_msg_def.h
interfaces/kit/js/: BUILD.gn
interfaces/kit/js/include/: native_device_attest.h
interfaces/kit/js/src/: native_device_attest.cpp
services/core/: BUILD.gn  attest_entry.c  attest_entry.h  attestsource.gni  network_config.json
services/core/adapter/: attest_adapter.c  attest_adapter_hal.c  attest_adapter_mock.c  attest_adapter_oem.c  attest_adapter_os.c  attest_adapter_property.c
services/core/attest/: attest_service.c  attest_service_active.c  attest_service_auth.c  attest_service_challenge.c  attest_service_device.c  attest_service_reset.c
services/core/dfx/: attest_dfx.c
services/core/include/: attest_error.h  attest_type.h
services/core/include/adapter/: attest_adapter.h  attest_adapter_mock.h  attest_adapter_oem.h  attest_adapter_os.h
services/core/include/attest/: attest_service.h  attest_service_active.h  attest_service_auth.h  attest_service_challenge.h  attest_service_device.h  attest_service_reset.h
services/core/include/dfx/: attest_dfx.h
services/core/include/network/: attest_channel.h  attest_coap.h  attest_coap_def.h  attest_network.h  attest_tls.h
services/core/include/security/: attest_security.h  attest_security_ticket.h  attest_security_token.h
services/core/include/utils/: attest_utils.h  attest_utils_file.h  attest_utils_json.h  attest_utils_list.h  attest_utils_log.h  attest_utils_memleak.h  attest_utils_timer.h
services/core/mini/adapter/: attest_adapter_network_config.c
services/core/mini/attest/: attest_service_pcid.c
services/core/mini/utils/: attest_utils_file_detail.c
services/core/network/: attest_channel.c  attest_coap.c  attest_network.c  attest_tls.c
services/core/security/: attest_security.c  attest_security_ticket.c  attest_security_token.c
services/core/small/adapter/: attest_adapter_network_config.c
services/core/small/attest/: attest_service_pcid.c
services/core/small/utils/: attest_utils_file_detail.c
services/core/utils/: attest_utils.c  attest_utils_file.c  attest_utils_json.c  attest_utils_list.c  attest_utils_log.c  attest_utils_memleak.c  attest_utils_timer.c
test/data/: attest_mock_device_para  attest_mock_network_para  token  tokenA
test/startup/: BUILD.gn  attest_framework_client_start.c
test/tdd/gtest/: BUILD.gn  attest_tdd_data_transfer.c  attest_tdd_data_transfer.h  attest_tdd_mock_config.h  attest_tdd_mock_hal.c  attest_tdd_mock_net.c  attest_tdd_mock_property.c  attest_tdd_test.cpp  attest_tdd_test_data.h
test/tdd/gtest/include/: attest_tdd_data_transfer.h  attest_tdd_mock_config.h  attest_tdd_mock_hal.h  attest_tdd_mock_property.h  attest_tdd_test.h
test/tdd/gtest/src/: attest_tdd_data_transfer.c  attest_tdd_mock_hal.c  attest_tdd_mock_net.c  attest_tdd_mock_property.c  attest_tdd_test.cpp
test/unittest/: BUILD.gn
test/unittest/src/: attest_mock.c  attest_mock.h
