# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/device_attest_lite/build/devattestconfig.gni")
path = "${devattest_path}/services/core"
sources_common = [
  "${path}/attest_entry.c",
  "${path}/adapter/attest_adapter.c",
  "${path}/adapter/attest_adapter_os.c",
  "${path}/adapter/attest_adapter_oem.c",
  "${path}/adapter/attest_adapter_mock.c",
  "${path}/attest/attest_service.c",
  "${path}/attest/attest_service_auth.c",
  "${path}/attest/attest_service_active.c",
  "${path}/attest/attest_service_challenge.c",
  "${path}/attest/attest_service_reset.c",
  "${path}/attest/attest_service_device.c",
  "${path}/network/attest_coap.c",
  "${path}/network/attest_network.c",
  "${path}/network/attest_tls.c",
  "${path}/security/attest_security.c",
  "${path}/security/attest_security_token.c",
  "${path}/security/attest_security_ticket.c",
  "${path}/utils/attest_utils_file.c",
  "${path}/utils/attest_utils_json.c",
  "${path}/utils/attest_utils_log.c",
  "${path}/utils/attest_utils_timer.c",
  "${path}/utils/attest_utils_list.c",
  "${path}/utils/attest_utils.c",
]

sources_mock = [
  "${path}/adapter/attest_adapter_hal.c",
  "${path}/adapter/attest_adapter_property.c",
  "${path}/network/attest_channel.c",
]

core_dirs = [
    "${path}/include",
    "${path}/include/adapter",
    "${path}/include/attest",
    "${path}/include/dfx",
    "${path}/include/security",
    "${path}/include/network",
    "${path}/include/utils",
    "${devattest_path}/services/oem_adapter/include",
    "//base/startup/init/interfaces/innerkits/include/syspara",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits",
    "//utils/native/lite/include",
    "//third_party/cJSON",
    "//third_party/bounds_checking_function/include",
    "${devattest_path}/interfaces/innerkits",
    "//base/startup/init/interfaces/hals",
    "//base/startup/init/interfaces/innerkits/include/syspara",
    "//developtools/syscap_codec/interfaces/inner_api",
  ]