# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//test/xts/device_attest_lite/build/devattestconfig.gni")

# L1 client bin
executable("devattest_client") {
  sources = [ "attest_framework_client_start.c" ]

  cflags = [
    "-ftrapv",
    "-Werror",
    "-Wextra",
    "-Wshadow",
    "-fstack-protector-all",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]
  cflags_cc = cflags

  ldflags = [ "-pthread" ]

  include_dirs = [ "${devattest_path}/interfaces/innerkits" ]

  deps = [ "${devattest_path}/framework:devattest_client" ]
}
