# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}
import("//test/xts/device_attest_lite/build/devattestconfig.gni")

lite_library("ace_kit_device_attest") {
  if (ohos_kernel_type == "liteos_m") {
    target_type = "static_library"
    defines = [ "CRED_MINI_LOG = 1" ]
  } else {
    target_type = "shared_library"
  }
  sources = [
    "src/native_device_attest.cpp",
  ]

  include_dirs = [
    "include",
    "${devattest_path}/interfaces",
    "${devattest_path}/framework/small/include",
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/base",
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/jsi",
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/async",
  ]

  if (ohos_kernel_type == "liteos_m") {
    deps = [ "${devattest_path}/framework:devattest_sdk" ]
  } else {
    include_dirs += [
        "//third_party/bounds_checking_function/include",
    ]
    deps = [
        "${devattest_path}/framework:devattest_client",
        "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    ]
  }
}