# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//test/xts/device_attest_lite/build/devattestconfig.gni")

shared_library("kit_device_attest") {
  sources = [ "src/native_device_attest.cpp" ]
  cflags = [
    "-ftrapv",
    "-Werror",
    "-Wextra",
    "-Wshadow",
    "-fstack-protector-all",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-fPIC",
    "-pthread",
  ]
  include_dirs = [
    "include",
    "${devattest_path}/interfaces/innerkits",
    "${devattest_path}/framework/small/include",
    "//third_party/bounds_checking_function/include",
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/base",
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/jsi",
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/async",
  ]
  deps = [
    "${devattest_path}/framework:devattest_client",
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
  ]
}
